Add a new RecipeType named ReaperRecipe for Reaper and Crystal; Incorporate FeatureGroup into ReaperAttribute.