@@ -1,10 +1,9 @@
-package warborinks.mods.reaperchronicle.world.reaper.reaper_attribute;
+package warborinks.mods.reaperchronicle.world.reaper.attribute;
 
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -12,32 +11,41 @@ import java.util.function.Function;
 import java.util.function.Supplier;
 
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
+
+import net.minecraft.Util;
+import warborinks.mods.reaperchronicle.core.registries.RCRegistries;
 
 @SuppressWarnings("null")
-public class FeatureGroup {
-    protected final Map<String, Function<Args, Result>> features;
+public class ReaperAttribute {
+    private final int color;
+    private final Map<String, Function<Args, Result>> features;
 
-    public FeatureGroup() {
+    @Nullable private String descriptionId;
+    
+    public ReaperAttribute(int color) {
+        this.color = color;
         this.features = new HashMap<>();
     }
 
-    public FeatureGroup addFeature(@Nonnull String name, @Nonnull Function<Args, Result> feature) {
+    public ReaperAttribute addFeature(@Nonnull String name, @Nonnull Function<Args, Result> feature) {
         this.features.put(name, feature);
         return this;
     }
 
-    public FeatureGroup addFeatures(@Nonnull Map<String, Function<Args, Result>> features) {
+    public ReaperAttribute addFeatures(@Nonnull Map<String, Function<Args, Result>> features) {
         this.features.putAll(features);
         return this;
     }
-    public FeatureGroup addFeatures(@Nonnull FeatureGroup featureGroup) {
-        return this.addFeatures(featureGroup.features);
+    public ReaperAttribute addFeatures(@Nonnull ReaperAttribute reaperAttribute) {
+        return this.addFeatures(reaperAttribute.features);
     }
     
-    public FeatureGroup addFeatures(@Nonnull Class<?> cls) {
+    public ReaperAttribute addFeatures(@Nonnull Class<?> cls) {
         this.features.putAll(FeatureGetter.get(cls));
         return this;
     }
+    
 
     public <T> T apply(@Nonnull String name, Class<T> resType, Object... objects) {
         if (this.findFeature(name)) {
@@ -62,7 +70,7 @@ public class FeatureGroup {
         private final List<Object> args;
 
         public Args(Object... objects) {
-            this.args = Arrays.asList(objects);
+            this.args = List.of(objects);
         }
 
         public <T> T get(@Nonnull Integer index, @Nonnull Class<T> argType) {
@@ -86,5 +94,17 @@ public class FeatureGroup {
     @Target(ElementType.METHOD)
     @Retention(RetentionPolicy.RUNTIME)
     public static @interface Feature {
+    }
+
+    public String getDescriptionId() {
+        if (this.descriptionId == null) {
+            this.descriptionId = Util.makeDescriptionId(RCRegistries.Names.REAPER_ATTRIBUTE, RCRegistries.REAPER_ATTRIBUTE.getKey(this));
+        }
+
+        return this.descriptionId;
+    }
+
+    public int getColor() {
+        return this.color;
     }
 }
